Fix options